--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -87,7 +87,7 @@
         d[l]
           ? console.warn(p + ' only loads once. Ignoring:', g)
           : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
-      })({ key: 'AIzaSyCYLO0tQ2ghCaS8pzh90i2Wbors0-E1Gb4', v: 'beta' });
+      })({ key: '', v: 'beta' });
     </script>
   </body>
 </html>
